[tool.poetry]
name = "AlphaBrew"
version = "1.0.1"
description = "A simplistic BeerJSON recipe editor."
authors = ["Jared Julien <jaredjulien@exsystems.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
PySide2 = "^5.15.2"
toml = "^0.10.2"
openpyxl = "^3.0.9"
QtAwesome = "^1.1.1"

[tool.poetry.dev-dependencies]
jsonschema = "^4.4.0"
rope = "^0.22.0"
pytest = "^7.0.1"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
